<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Comfort</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="comfort">Comfort</string>
    <string name="eat">Eat.</string>
    <string name="drink">Drink.</string>
    <string name="cocktails">Cocktails</string>
    <string name="beer">Beer</string>
    <string name="wine">Wine</string>
    <string name="whiskey">Whiskey</string>
    <string name="misc">Miscellaneous</string>
    <string name="title_activity_bar">BarActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="pig_logo">Comfort Pig Logo</string>
    <string name="comfort_logo">Comfort Logo</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="straight_bourbon">Straight Bourbon</string>
    <string name="american_rye">American Rye</string>
    <string name="other_american">Other American</string>
    <string name="irish">Irish Whiskey</string>
    <string name="scotch">Scotch Whisky</string>
    <string name="canadian">Canadian Whisky</string>
    <string name="other_whiskey">Other Whiskey</string>
    <string name="misc_american">Miscellaneous American</string>
    <string name="title_activity_whiskey">WhiskeyActivity</string>
    <string name="title_activity_irish_and_scotch">IrishAndScotchActivity</string>
    <string name="foreign_whiskey">Foreign Whisk(e)y</string>
    <string name="title_activity_other_whiskey">OtherWhiskeyActivity</string>
    <string name="wheat_whiskey">Wheat Whiskey</string>
    <string name="white_whiskey">White Whiskey</string>
    <string name="tennessee_whiskey">Tennessee Whiskey</string>
    <string name="domestic_beer">Domestic</string>
    <string name="import_beer">Import</string>
    <string name="american_microbrew">American Microbrew</string>
    <string name="title_activity_foreign_whiskey">ForeignWhiskey</string>
    <string name="title_activity_beer">BeerActivity</string>
    <string name="title_activity_wine">WineActivity</string>
    <string name="wine_red_glass">Reds by the Glass</string>
    <string name="wine_white_glass">Whites by the Glass</string>
    <string name="wine_red_bottle">Reds by the Bottle</string>
    <string name="wine_white_bottle">Whites by the Bottle</string>
    <string name="title_activity_white_bottle">WhiteBottleActivity</string>
    <string name="title_activity_red_bottle">RedBottleActivity</string>
    <string name="app_id">184319295025340</string>
    <string name="title_activity_wine_glass">WineGlassActivity</string>
    <string name="btg">By the Glass</string>
    <string name="bottle">By the Bottle</string>
    <string name="draft_beer">Draft</string>
    <string name="enter_notes_hint">Enter Notes Here</string>
    <string name="save_rating">\u0020Save Rating and Comments\u0020</string>

</resources>