<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/yellow"
    android:layout_height="match_parent"
    tools:context=".BarActivity" >

    
    <Button
        android:id="@+id/button5"
        android:onClick="goToLiquorList"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dip"
        android:textStyle="bold"
        android:background="@drawable/bordered_button"
        android:text="@string/misc" />

    <Button
        android:id="@+id/button4"
        android:onClick="goToWhiskey"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dip"
        android:background="@drawable/bordered_button"
        android:textStyle="bold"
        android:text="@string/whiskey" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button4"
        android:layout_marginBottom="52dip"
        android:layout_alignLeft="@+id/button4"
        android:background="@drawable/bordered_button"
        android:onClick="goToWineList"
        android:text="@string/wine"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:layout_marginBottom="52dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToBeerList"
        android:text="@string/beer"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_marginBottom="52dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToCocktailList"
        android:text="@string/cocktails"
        android:textStyle="bold" />

</RelativeLayout>