<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/yellow"
    tools:context=".WhiskeyActivity" >

    <Button
        android:id="@+id/button4"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToForeign"
        android:text="@string/foreign_whiskey"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="64dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToOtherAmerican"
        android:text="@string/other_american"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button5"
        android:layout_alignLeft="@+id/button5"
        android:layout_marginBottom="64dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToList"
        android:text="@string/straight_bourbon"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="64dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToList"
        android:text="@string/american_rye"
        android:textStyle="bold" />

</RelativeLayout>