<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:gravity="center_vertical"
    android:paddingTop="50dip"
    android:orientation="vertical" >
    
	
    <Button
        android:id="@+id/button3"
        android:layout_width="300dip"
        android:layout_weight="1"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="70dip"
        android:background="@drawable/bordered_button"
        android:onClick="goToList"
        android:text="@string/american_rye"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:layout_marginBottom="70dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bordered_button"
        android:onClick="goToList"
        android:text="@string/straight_bourbon"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:layout_marginBottom="70dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bordered_button"
        android:onClick="goToOtherAmerican"
        android:text="@string/other_american"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:layout_weight="1"
        android:layout_marginBottom="70dip"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bordered_button"
        android:onClick="goToForeign"
        android:text="@string/foreign_whiskey"
        android:textStyle="bold" />
    
    
</LinearLayout>